deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dsh-api
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
